--- a/PasswordManagerApp/PasswordManager/appsettings.json
+++ b/PasswordManagerApp/PasswordManager/appsettings.json
@@ -1,9 +1,34 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+
+  {
+    "Serilog": {
+      "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console"],
+      "MinimumLevel": {
+        "Default": "Information"
+      },
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      },
+      "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+      "WriteTo": [
+        {
+          "Name": "File",
+          "Args": {
+            "path": "C:\\password_manager_log.txt",
+            "outputTemplate": "{Timestamp:G} {Message} {NewLine:1}{Exception:1}"
+          }
+        },
+        {
+          "Name": "File",
+          "Args": {
+            "path": "C:\\password_manager_log.json",
+            "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+          }
+        },
+        {
+          "Name": "Console"
+        }
+      ]
+    },
+    "AllowedHosts": "*"
+  }
