added tokens service, and implemented access token generation

--- a/PasswordManagerApp/PasswordManager/appsettings.json
+++ b/PasswordManagerApp/PasswordManager/appsettings.json
@@ -33,5 +33,8 @@
     "Name": "PasswordsManager",
     "ConnectionString": "mongodb+srv://passwordmanager:K32uTQgV09uJdYHJ@passwordsmanagercluster.bgzok3n.mongodb.net/?retryWrites=true&w=majority"
   },
+  "AppSettings": {
+    "SecretKey": "9iSITyJO3*Xm1eVJ*@RS29g##3Vc71M"
+  },
   "AllowedHosts": "*"
 }
