--- a/PasswordManagerApp/PasswordManager/PasswordManager.csproj
+++ b/PasswordManagerApp/PasswordManager/PasswordManager.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthenticationService\AuthenticationService.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
