Email service created

--- a/PasswordManagerApp/PasswordManager/appsettings.json
+++ b/PasswordManagerApp/PasswordManager/appsettings.json
@@ -36,5 +36,13 @@
   "AppSettings": {
     "SecretKey": "9iSITyJO3*Xm1eVJ*@RS29g##3Vc71M"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailConfiguration": {
+    "From": "passmanager6@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "DisplayName": "Passwords Manager",
+    "UserName": "passmanager6@gmail.com",
+    "Password": "bvqtwvrhsgdryzao"
+  }
 }
