update encryption service

--- a/PasswordManagerApp/PasswordManager/PasswordManager.csproj
+++ b/PasswordManagerApp/PasswordManager/PasswordManager.csproj
@@ -20,7 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AuthenticationService\AuthenticationService.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\EmailingService\EmailingService.csproj" />
     <ProjectReference Include="..\PasswordEncryption\PasswordEncryption.csproj" />
   </ItemGroup>
 
