--- a/PasswordManagerApp/Data/Data.csproj
+++ b/PasswordManagerApp/Data/Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+    <PackageReference Include="DataAnnotationsExtensions" Version="5.0.1.27" />
   </ItemGroup>
 
 </Project>
