--- a/PasswordManagerApp/UnitTests/UnitTests.csproj
+++ b/PasswordManagerApp/UnitTests/UnitTests.csproj
@@ -23,9 +23,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AuthenticationService\AuthenticationService.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\EmailingService\EmailingService.csproj" />
     <ProjectReference Include="..\PasswordEncryption\PasswordEncryption.csproj" />
+    <ProjectReference Include="..\PasswordManager\PasswordManager.csproj" />
   </ItemGroup>
 
 </Project>
