--- a/PasswordManagerApp/EmailingService/EmailingService.csproj
+++ b/PasswordManagerApp/EmailingService/EmailingService.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="MimeKit" Version="3.3.0" />
   </ItemGroup>
 
