added data access repository for UserData and fixed some mistakes

--- a/PasswordManagerApp/PasswordManager/appsettings.json
+++ b/PasswordManagerApp/PasswordManager/appsettings.json
@@ -31,7 +31,8 @@
   },
   "MongoDbConfig": {
     "Name": "PasswordsManager",
-    "ConnectionString": "mongodb+srv://passwordmanager:K32uTQgV09uJdYHJ@passwordsmanagercluster.bgzok3n.mongodb.net/?retryWrites=true&w=majority"
+    "ConnectionString": "mongodb+srv://passwordmanager:K32uTQgV09uJdYHJ@passwordsmanagercluster.bgzok3n.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "PasswordsManager"
   },
   "AppSettings": {
     "SecretKey": "9iSITyJO3*Xm1eVJ*@RS29g##3Vc71M"
