--- a/PasswordManagerApp/PasswordManager/PasswordManager.csproj
+++ b/PasswordManagerApp/PasswordManager/PasswordManager.csproj
@@ -16,6 +16,7 @@
 	  <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 	  <PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
