added dashboard component

--- a/Password-Manager-UI/angular.json
+++ b/Password-Manager-UI/angular.json
@@ -30,10 +30,23 @@
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./node_modules/font-awesome/css/font-awesome.css"
+              "./node_modules/font-awesome/css/font-awesome.css",
+              "./node_modules/startbootstrap-sb-admin-2/css/sb-admin-2.css",
+              "./node_modules/startbootstrap-sb-admin-2/css/sb-admin-2.min.css"
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.js",
+              "./node_modules/startbootstrap-sb-admin-2/js/demo/chart-pie-demo.js",
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.js",
+              "./node_modules/startbootstrap-sb-admin-2/js/sb-admin-2.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/vendor/bootstrap/js/bootstrap.bundle.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/vendor/jquery-easing/jquery.easing.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/vendor/jquery/jquery.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/vendor/chart.js/Chart.min.js",
+              "./node_modules/startbootstrap-sb-admin-2/js/demo/chart-area-demo.js"
+              
             ]
           },
           "configurations": {
