--- a/Password-Manager-UI/package.json
+++ b/Password-Manager-UI/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^3.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
