--- a/PasswordManagerApp/PasswordEncryption/PasswordEncryption.csproj
+++ b/PasswordManagerApp/PasswordEncryption/PasswordEncryption.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.3" />
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
   </ItemGroup>
 
