--- a/PasswordManagerApp/PasswordManager/PasswordManager.csproj
+++ b/PasswordManagerApp/PasswordManager/PasswordManager.csproj
@@ -25,6 +25,7 @@
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\EmailingService\EmailingService.csproj" />
     <ProjectReference Include="..\PasswordEncryption\PasswordEncryption.csproj" />
+    <ProjectReference Include="..\PDFService\PDFService.csproj" />
   </ItemGroup>
 
 </Project>
