--- a/Password-Manager-UI/package.json
+++ b/Password-Manager-UI/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.1",
     "rxjs": "~7.5.0",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "~13.2.6",
     "@angular/cli": "~13.2.6",
     "@angular/compiler-cli": "~13.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
